--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@
             opacity: 1;
         }
     }
-
+    /*admin*/
     #navleft {
         background-color: #404e67;
     }
@@ -356,6 +356,10 @@
         /* box-shadow: 0px 4px 10px rgb(16 156 241 / 24%); */
         margin-top: 20px;
     }
-#male{
+/*#male{
     margin-left:10px;
+}*/
+#editDetail_btn {
+    float: right;
+    margin-right: 20px;
 }
