--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@
         box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24);
     }
 
-#searchNameNric,
+#searchName,
 #searchName_2 {
     font-size: 16px;
     display: inline-block;
@@ -366,5 +366,8 @@
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
     background-color: #404e67;
-    border-right: 0;
+
+}
+.select2-selection__choice__remove {
+    border-right: 0 !important;
 }
