--- a/CSIT314/boundary/style.css
+++ b/CSIT314/boundary/style.css
@@ -418,3 +418,8 @@
         width: 28px;
         height: 28px;
     }
+    
+    .inlineBlock {
+        display: inline-block;
+        padding: 0;
+    }
