--- a/style.css
+++ b/style.css
@@ -303,7 +303,8 @@
     }
     
     #admin_searchUserName,
-    #searchUserProfile {
+    #searchUserProfile,
+    #author_searchEnterPaperName {
         font-size: 16px;
         display: inline-block;
         width: 300px;
@@ -341,7 +342,7 @@
         padding-top: 5px;
         padding-bottom: 5px;
         /* box-shadow: 0px 4px 10px rgb(16 156 241 / 24%); */
-        margin-top: 15%;
+        margin-top: 15px;
         border-style: solid;
     }
     
@@ -355,7 +356,7 @@
         padding-top: 5px;
         padding-bottom: 5px;
         /* box-shadow: 0px 4px 10px rgb(16 156 241 / 24%); */
-        margin-top: 15%;
+        margin-top: 15px;
         border-style: solid;
     }
     
@@ -369,13 +370,14 @@
         padding-top: 5px;
         padding-bottom: 5px;
         /* box-shadow: 0px 4px 10px rgb(16 156 241 / 24%); */
-        margin-top: 15%;
+        margin-top: 15px;
     }
     /*#male{
     margin-left:10px;
 }*/
     
-    #editDetail_btn {
+    #editDetail_btn,
+    #author_editDetail_btn {
         float: right;
         margin-right: 20px;
     }
@@ -424,4 +426,8 @@
     .inlineBlock {
         display: inline-block;
         padding: 0;
+    }
+    
+    .detail label {
+        margin-bottom: 16px;
     }
