--- a/style.css
+++ b/style.css
@@ -425,7 +425,8 @@
     
     .inlineBlock {
         display: inline-block;
-        padding: 0;
+        /* padding: 0; */
+        height: auto !important;
     }
     
     .detail label {
