--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@
         height: 40px;
     }
     
-    .sss {
+    .author_notiNo {
         height: 17px;
         line-height: 17px;
         width: 17px;
@@ -435,4 +435,17 @@
     
     .detail>.form-control {
         width: 100% !important;
+    }
+    /* auther view paper */
+    
+    #author_viewRevRatContainer {
+        float: right;
+    }
+    
+    .author_viewPaperEditDetail_btn,
+    .admin_searchUserEditDetail_btn,
+    .admin_searchUserProfileEditDetail_btn {
+        float: right;
+        margin-right: 20px;
+        clear: both;
     }
