--- a/style.css
+++ b/style.css
@@ -371,16 +371,18 @@
                 padding-bottom: 5px;
                 /* box-shadow: 0px 4px 10px rgb(16 156 241 / 24%); */
                 margin-top: 15px;
+                float: right;
+                margin-right: 20px;
             }
             /*#male{
     margin-left:10px;
 }*/
-            
-            #editDetail_btn,
+            /* #editDetail_btn,
             #author_editDetail_btn {
                 float: right;
                 margin-right: 20px;
             }
+             */
             
             .select2-container--default .select2-selection--multiple .select2-selection__choice {
                 background-color: #404e67;
@@ -399,7 +401,7 @@
                 height: 40px;
             }
             
-            .author_notiNo {
+            hor_ .author_notiNo {
                 height: 17px;
                 line-height: 17px;
                 width: 17px;
