--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@
                 padding-bottom: 5px;
                 /* box-shadow: 0px 4px 10px rgb(16 156 241 / 24%); */
                 margin-top: 15px;
-                float: right;
+                /* float: right; */
                 margin-right: 20px;
             }
             /*#male{
@@ -455,4 +455,8 @@
             .select2-container,
             .select2-selection--single {
                 height: 38px !important;
+            }
+            
+            .author_viewPaperAddRating {
+                font-size: 12px;
             }
