--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@
                 margin-top: 5px;
                 /* width: 130px; */
                 display: inline-block;
+                clear: both;
             }
             
             .modal-body p {
@@ -322,13 +323,13 @@
                 opacity: 0.8;
                 text-align: left;
                 display: inline;
-                width: 40%;
+                width: 30%;
                 float: left;
-                clear: left;
+                clear: both;
             }
             
             .detail {
-                width: 50%;
+                width: 60%;
                 float: right;
             }
             
@@ -446,7 +447,8 @@
             
             .author_viewPaperEditDetail_btn,
             .admin_searchUserEditDetail_btn,
-            .admin_searchUserProfileEditDetail_btn {
+            .admin_searchUserProfileEditDetail_btn,
+            .reviewer_viewPaperEditDetail_btn {
                 float: right;
                 margin-right: 20px;
                 clear: both;
@@ -459,4 +461,13 @@
             
             .author_viewPaperAddRating {
                 font-size: 12px;
+            }
+            
+            .reviewer_viewPaperAddRating {
+                font-size: 12px;
+                width: 10%;
+            }
+            
+            #reviewer_editPaperModal .modal-dialog {
+                min-width: 600px;
             }
