--- a/style.css
+++ b/style.css
@@ -476,3 +476,15 @@
                 clear: right !important;
                 width: 100% !important;
             }
+            
+            .reviewer_deleteBid {
+                background-color: white;
+                color: red;
+                border: red;
+                border-radius: 5px;
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 5px;
+                padding-bottom: 5px;
+                border-style: solid;
+            }
